--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,8 @@
 .container-1{
     border: 1px solid green;
+    margin: 0 auto;
+    width: 70%;
+    text-align: center;
 }
 .flex-box-container-1 {
 display: flex;
