WIP: rock paper scissors assets

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-.container-1, .container-2{
+.container-1, .container-2, .container-3{
     border: 1px solid green;
     margin: 0 auto;
     width: 70%;
