--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,9 +4,9 @@
     width: 70%;
     text-align: center;
 }
-.flex-box-container-1, .flex-box-container-2{
+.flex-box-container-1, .flex-box-container-2, .flex-box-rps{
 display: flex;
-border: 1px solid rgb(43, 226, 217);
+/* border: 1px solid rgb(43, 226, 217); */
 padding: 10px;
 flex-wrap: wrap;
 flex-direction: row;
@@ -19,8 +19,10 @@ justify-content: space-around;
     /* border: 1px solid violet; */
     align-items: center;
 }
-
 .flex-box-container-2 img{
     box-shadow: 0px 18px 50px rgba(0, 0, 0, 0.7);
     margin: 10px;
+}
+.flex-box-rps img:hover{
+    box-shadow: 0px 10px 50px rgba(37, 50, 233, 11);
 }
