style: blackjack board styling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,12 @@
-.container-1, .container-2, .container-3, .container-4{
+.container-1, .container-2, .container-3, .container-4, .container-5{
     border: 1px solid green;
     margin: 0 auto;
-    width: 70%;
+    width: 75%;
     text-align: center;
 }
-.flex-box-container-1, .flex-box-container-2, .flex-box-rps, .flex-box-pick-color{
+
+.flex-box-container-1, .flex-box-container-2, .flex-box-rps, .flex-box-pick-color, .flex-blackjack-row-1, .flex-blackjack-row-2, .flex-blackjack-row-3{
 display: flex;
-/* border: 1px solid rgb(43, 226, 217); */
 padding: 10px;
 flex-wrap: wrap;
 flex-direction: row;
@@ -14,7 +14,7 @@ justify-content: space-around;
 }
 
 .flex-box-container-1 div{
-    display: flex;
+    display: flex;  
     padding: 10px;
     /* border: 1px solid violet; */
     align-items: center;
@@ -25,4 +25,34 @@ justify-content: space-around;
 }
 .flex-box-rps img:hover{
     box-shadow: 0px 10px 50px rgba(37, 50, 233, 11);
+}
+
+/* blackjack styling */
+.flex-blackjack-row-1,.flex-blackjack-row-2{
+    background: url('https://img.freepik.com/free-photo/green-fabric-with-white-background_1340-26017.jpg?t=st=1699771353~exp=1699774953~hmac=375c06a5556c7206de275986291ae62b7c2bbfcbdf22e2f4f7ea4ee26c4b0f98&w=740');
+    color: #ffffff;
+}
+
+.flex-blackjack-row-1 div{
+    border: 1px solid black;
+    padding: 10px;
+    flex: 1;
+    text-align: center;
+    height: 350px;
+}
+.flex-blackjack-row-1 img{
+    height: 25%;
+    padding: 10px; ;
+}
+.flex-blackjack-row-2 div{
+    /* border: 1px solid black; */
+    padding: 10px;
+}
+.flex-blackjack-row-2 button{
+    border: 1px solid black;
+    padding: 10px;
+}
+table, th, td{
+    padding:8px ;
+    border: 1px solid black;
 }
